z-index bug with map fixed

--- a/components/DiaryFilesMap/DiaryFilesMap.module.scss
+++ b/components/DiaryFilesMap/DiaryFilesMap.module.scss
@@ -1,6 +1,7 @@
 @import '../../styles/global.scss';
 
 .diaryFilesMap {
+  z-index: 1;
   display: block;
   height: 400px;
 }
